# minishell

./: .nfs00000000001b0687000001f9  .nfs00000000001b0d050000012a  .nfs0000000017d7143800000072  Makefile  README.md  do_naprawy.txt  elo.txt  input  minishell  minishell.c  minishell.h
.minishell_tester/: anttest  plik.txt  test
.minishell_writing_helpers/: jenson_2_file  output  tesc.c
.minishell_writing_helpers/DOC/: external_function_allowded
.minishell_writing_helpers/hhp3/: a.out  gettoken.c
.minishell_writing_helpers/lern_other_code/: test
.minishell_writing_helpers/lern_other_code/MINISHELL/: CMakeLists.txt
.minishell_writing_helpers/lern_other_code/MINISHELL/minishell/: Makefile
.minishell_writing_helpers/lern_other_code/MINISHELL/minishell/srcs/parser/: parser.c
.minishell_writing_helpers/test/: a.out  parse_test.c
.test/: a.out  cmd_buldert.c  cmd_buldert_test.c  colors.c  ft_d_roll.c  git_hub.cmd  heredoc.txt  lexter_parser_tester.c  lexter_test.c  parser_test.c  test_quote.c
antminishel/: .nfs00000000008926c900000266  Makefile  README.md  minishell
antminishel/.test/: a.out  env_list_test.c  ft_d_roll.c  parse_quote_test.c  parser_test.c  valgrind_cmd
antminishel/headers/: minishell.h  structs.h
antminishel/libft/: Makefile  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_printf.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  ft_toupper.c  get_next_line.c  get_next_line_utils.c  get_next_line_utils_bonus.c  print_pointer.c
antminishel/source/: a.out  add_node.c  env.c  env_list_utils.c  error_handler.c  free.c  lexter0.c  lexter1.c  main.c  parse_quote.c  parser.c  signals.c
c_files/: <<.c  minishell  minishell.c  parser.c
headers/: minishell.h  structs.h
libft/: Makefile  ft_atoi.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strncmp.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  get_next_line.c  get_next_line_bonus.c  get_next_line_utils.c  get_next_line_utils_bonus.c  (+6 more)
source/: a.out  add_node.c  error_handler.c  main.c  minishell.c  parse_quote.c  parser.c  redirection.c  test_output.txt
source/builtins/: builtins_utils.c  execute.c  ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_export_utils.c  ft_pwd.c  ft_unset.c
source/execution/: execute_pipeline.c  execute_utils1.c  execute_utils2.c  execute_utils3.c  execute_utils4.c  execve.c  handle_pipe.c  handle_redirections.c  handle_redirections_utils.c  heredoc.c  syntax.c
source/parser/: case_dolar.c  cmd_bilder.c  cmd_bilder_tool.c  lexter.c  lexter_cmd.c  lexter_cmd_dolar.c  lexter_quote.c  lexter_redir.c  parse_example.c  parse_quote.c  (+3 more)
test/: parse_quote_test.c
writing_helpers/: .nfs0000000017d709f8000000a9  .nfs0000000017d70a0000000166  .nfs0000000017d70a0100000167  README.md  a.out  antekmanual  exex.c  external_function_allowded  f_and_p.c  fork.c  pingresult.txt  sendarray.c  sendstring  sig_proces_m.c  tesc.c
(+76 files in other folders)
