cmake_minimum_required(VERSION 3.22)
project(MINISHELL C)

set(CMAKE_C_STANDARD 11)

include_directories(minishell)
include_directories(minishell/include)
include_directories(minishell/libft)
include_directories(minishell/srcs)

add_executable(MINISHELL
        minishell/include/functions.h
        minishell/include/globals.h
        minishell/include/minishell.h
        minishell/include/prompt.h
        minishell/include/types.h
        minishell/libft/ft_atoi.c
        minishell/libft/ft_bzero.c
        minishell/libft/ft_calloc.c
        minishell/libft/ft_isalnum.c
        minishell/libft/ft_isalpha.c
        minishell/libft/ft_isascii.c
        minishell/libft/ft_isdigit.c
        minishell/libft/ft_isprint.c
        minishell/libft/ft_itoa.c
        minishell/libft/ft_lstadd_back.c
        minishell/libft/ft_lstadd_front.c
        minishell/libft/ft_lstclear.c
        minishell/libft/ft_lstdelone.c
        minishell/libft/ft_lstiter.c
        minishell/libft/ft_lstlast.c
        minishell/libft/ft_lstmap.c
        minishell/libft/ft_lstnew.c
        minishell/libft/ft_lstsize.c
        minishell/libft/ft_memchr.c
        minishell/libft/ft_memcmp.c
        minishell/libft/ft_memcpy.c
        minishell/libft/ft_memmove.c
        minishell/libft/ft_memset.c
        minishell/libft/ft_putchar_fd.c
        minishell/libft/ft_putendl_fd.c
        minishell/libft/ft_putnbr_fd.c
        minishell/libft/ft_putstr_fd.c
        minishell/libft/ft_split.c
        minishell/libft/ft_strchr.c
        minishell/libft/ft_strcmp.c
        minishell/libft/ft_strdup.c
        minishell/libft/ft_striteri.c
        minishell/libft/ft_strjoin.c
        minishell/libft/ft_strlcat.c
        minishell/libft/ft_strlcpy.c
        minishell/libft/ft_strlen.c
        minishell/libft/ft_strmapi.c
        minishell/libft/ft_strncmp.c
        minishell/libft/ft_strnstr.c
        minishell/libft/ft_strrchr.c
        minishell/libft/ft_strtrim.c
        minishell/libft/ft_substr.c
        minishell/libft/ft_tolower.c
        minishell/libft/ft_toupper.c
        minishell/libft/libft.h
        minishell/srcs/builtins/cd.c
        minishell/srcs/builtins/echo.c
        minishell/srcs/builtins/env.c
        minishell/srcs/builtins/exit.c
        minishell/srcs/builtins/export.c
        minishell/srcs/builtins/pwd.c
        minishell/srcs/builtins/unset.c
        minishell/srcs/environment/env_handler.c
        minishell/srcs/errors/error.c
        minishell/srcs/execution/builtin_commands.c
        minishell/srcs/execution/command_execution.c
        minishell/srcs/execution/execute.c
        minishell/srcs/execution/io_redir.c
        minishell/srcs/execution/pipe_management.c
        minishell/srcs/filesystem/file_operations.c
        minishell/srcs/io/input_handler.c
        minishell/srcs/parser/command.c
        minishell/srcs/parser/command_utils.c
        minishell/srcs/parser/command_utils2.c
        minishell/srcs/parser/dollar_sign.c
        minishell/srcs/parser/dollar_sign_utils.c
        minishell/srcs/parser/parser.c
        minishell/srcs/parser/token_remove.c
        minishell/srcs/parser/token_type.c
        minishell/srcs/parser/tokenizer.c
        minishell/srcs/parser/tokenizer_utils.c
        minishell/srcs/signals/signal_handlers.c
        minishell/srcs/utils/cleanup.c
        minishell/srcs/utils/initialization.c
        minishell/srcs/utils/memory_utils.c
        minishell/srcs/main.c)
